deployment/gke-deploy.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: aiml-dra-anomaly
  name: frp-dra-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frp-dra-service
  template:
    metadata:
      labels:
        app: frp-dra-service
    spec:
      containers:
      - name: frp-dra-service
        image: ubuntu:latest
        command: ["/bin/bash", "-c"]
        ports:
        - name: vhost
          containerPort: 7000 #You must replace with the relevant port frpserver is listening to  
        - name: web-panel
          containerPort: 8000
        resources:
          limits:
            cpu: "200m"
            memory: "200Mi"
          requests:
            cpu: "200m"
            memory: "200Mi"
        args:
        - |
          apt-get update && apt-get install wget tar -y
          wget https://github.com/fatedier/frp/releases/download/v0.56.0/frp_0.56.0_linux_amd64.tar.gz
          tar -zxvf frp_0.56.0_linux_amd64.tar.gz
          cd frp_0.56.0_linux_amd64/
          ./frps -c /usr/local/frps/frps.toml
        volumeMounts:
        - mountPath: /usr/local/frps/frps.toml
          subPath: frps.toml
          name: frps-config
      volumes:
      - name: frps-config
        configMap:
          name: frps-config
          items:
          - key: frps.toml
            path: frps.toml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: aiml-dra-anomaly
  name: frp-dra-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "50000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "50000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "50000"
    nginx.ingress.kubernetes.io/proxy-body-size: "5000m"

spec:
  rules:
  - host: dra.aiml.team
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frp-dra-service-500
            port:
              number: 500
  tls:
  - hosts:
    - dra.aiml.team
    secretName: dra-tls

---
apiVersion: v1
kind: Service
metadata:
  namespace: aiml-dra-anomaly
  name: frp-dra-service-forward-port
spec:
  type: ClusterIP
  selector:
    app: frp-dra-service
  ports:
  - port: 7000
    protocol: TCP
    targetPort: 7000
---
apiVersion: v1
kind: Service
metadata:
  namespace: aiml-dra-anomaly
  name: frp-dra-service-500
spec:
  type: ClusterIP
  selector:
    app: frp-dra-service
  ports:
  - port: 500
    protocol: TCP
    targetPort: 500
